k8s/manifests-fc6a5e/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-fc6a5e
  namespace: journee
  labels:
    app: journee-fc6a5e
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-fc6a5e
  template:
    metadata:
      labels:
        app: journee-fc6a5e
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-fc6a5e
          image: gcr.io/my-docker-471807/journee:v7.0.0
          ports:
            - containerPort: 3000
